<resources>
    <string name="app_name">Life Counter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="p3">Player 3</string>
    <string name="p4">Player 4</string>
    <string name="p5">Player 5</string>
    <string name="p6">Player 6</string>
    <string name="p7">Player 7</string>
    <string name="p8">Player 8</string>
    <string name="plusOne">+</string>
    <string name="minusOne">-</string>
    <string name="plusFive">+5</string>
    <string name="minusFive">-5</string>
    <string name="life">Life</string>
</resources>
